--- a/_posts/2021-09-12-warm-up.md
+++ b/_posts/2021-09-12-warm-up.md
@@ -1,21 +1,31 @@
-The next edition of Mars College approaches with the new year. Applications have started. Now is time to firm up our infrastructure plan...
+---
+layout: post
+author: chatsubo.z
+title: Mars College '22 Prep
+description: The next edition of Mars College approaches with the new year. Applications have started. Now is time to firm up our infrastructure plan...
+image: https://mars.college/images/images/blog/image0-5A5C1.jpg
+share_type: summary_large_image
+---
 
-For the 10 years prior to the pandemic I camped with Disorient at Burningman. Disorient’s Urban Plan provided practical guidance to us as we built and also left an artifact we can look back on to see details of our camp installations over the years. We don’t have The Eye’s sketchup skills or experience, but the Disorient Urban Plan gives us a good model to look to as we conceive Mars 22.
+![pallet racks](/images/tentstrailers.png)
 
-Earth
+[Disorient's Burningman Urban Plan](https://wiki.disorient.info/index.php?title=Urban_plan) is a model all desert camps can look to for guidance on how to organize a big camp. It provides practical guidance to people building and an artifact we can look back on to see details of camp installations over the years. We don’t have [The Eye](https://flyvision.org/the_eye/03/)’s sketchup skills or experience, but the Disorient Urban Plan gives us a good model to look to as we conceive Mars '22.
+
+As we talked about on the [work](/work) page this year we are organizing our infrastructure along the Earth / Fire / Water / Air lines..
+
+## Earth
 I’m a pallet rack guy. Pallet Racks define the core structure of our camp. Laying them out in sketchup and building them in real life is immensely rewarding for how quickly substantial structure comes into being. This year our main pallet rack structure will form a quad. The four sides visually connected but separated by enough space to enable simultaneous activities in the different sections without too much audio interference between them.
 
-Fire
+## Fire
 Right now my intention is to set up independent 1kw - 2kw solar systems on the roof of each quad section. This seems like a reasonable scale solar system for people learning about solar for their own #VanLife of off-grid projects. It should be sufficient for running lights, charging devices (including unicycles) and running tv’s or projectors. If we really want to play music we may need to run a generator, but for our regular sunset fire spin & dance party this should be sufficient.
 
-Water
+## Water
 Maybe the biggest change this year will be in how we handle compost. Last year we called in a porta potty service to pump our black water tanks and clear the waste from two porta potties we rented. It was over $1000 / month expensive, awkward to coordinate, risky if the pump truck got stuck in the sand, and unsatisfying in our pursuit towards general off-grid sustainability.  Our plan this year is to compost human and food waste. We will replace the toilets in our camper trailers with bucket toilets and use hay from local farms for cover material. Leveraging our grey water I hope at the end of Mars College we have a bunch of small trees in grow bags we can use for landscaping. 
 
-Air
+## Air
 Internet is the final element in our mix. We have fiber coming from ATT to a mobile home in Bombay. Our first priority is to beam that to Mars ro provide strong wifi in all of our live and work spaces. We also need to get a media center TV / projector set up in each of the lounge spaces. If we have time I would like to offer internet to the surrounding community.
 
-Timeline
+## Timeline
 If enough people come for the warm-up period November - December I would like to get the Chiba structure set up on Mars and all the systems in place for one section of it. This will give us time to work out the details of how the different systems work and order necessary materials before the main group of people arrive at the beginning of January. 
 
 Ideally within the first 2 weeks of Mars College everyone is settled into their living situation and we have built out our core build with all the systems functioning. Inevitably we’ll continue to tweak our camp to make it pretty or adjust to practical realities but hopefully we can shift our focus towards our other creative endeavors and enjoy the infrastructure we established early on.
-
