--- a/_posts/2021-09-12-warm-up.md
+++ b/_posts/2021-09-12-warm-up.md
@@ -3,11 +3,9 @@ layout: post
 author: chatsubo.z
 title: Mars College '22 Prep
 description: The next edition of Mars College approaches with the new year. Applications have started. Now is time to firm up our infrastructure plan...
-image: https://mars.college/images/images/blog/image0-5A5C1.jpg
+image: https://mars.college/images/tentstrailers.png
 share_type: summary_large_image
 ---
-
-![pallet racks](/images/tentstrailers.png)
 
 [Disorient's Burningman Urban Plan](https://wiki.disorient.info/index.php?title=Urban_plan) is a model all desert camps can look to for guidance on how to organize a big camp. It provides practical guidance to people building and an artifact we can look back on to see details of camp installations over the years. We don’t have [The Eye](https://flyvision.org/the_eye/03/)’s sketchup skills or experience, but the Disorient Urban Plan gives us a good model to look to as we conceive Mars '22.
 
