--- a/_posts/2021-10-9-tribes.md
+++ b/_posts/2021-10-9-tribes.md
@@ -2,7 +2,7 @@
 layout: post
 author: Chatsubo Z
 title: The Tribes of Mars
-description: 
+description: The march of life moves towards complexity through cell division and specialization. This year communal effort on Mars subdivides and mutates into the elemental tribes of Earth, Air, Fire & Water.
 image: https://mars.college/images/gallery/tumblr_24ba8e8b6943befc832ff9217b8029da_84c7bc59_640.jpg
 share_type: summary_large_image
 ---
