Update and rename schedule to 2021-10-13-schedule.md

--- a/_posts/2021-10-13-schedule.md
+++ b/_posts/2021-10-13-schedule.md
@@ -1,6 +1,14 @@
+---
+layout: post
+author: Chatsubo Z
+title: Mars 2022 Schedule
+description: A rough timeline of Mars College in 2022
+image: https://mars.college/images/gallery/thumb/VID_20210314_235300_163.mp4
+share_type: summary_large_image
+---
 # MArs College 2022 schedule
 ## November 1 - December 25 | Planning  
-This is the time for long term thinking. Specifically we envision our infrastructure, plan our build, organize and purchase material so we have everything we need once we get started. This is also a time for imagining what people want to get out of their time here: things they want to learn, online classes they want to take, projects they want to do. Most of our interaction during this time happens on Discord, but we are open to people coming in to help prepare projects. By Christmas we should have everything we need for our build organized and ready to go.
+Plan our build, organize and purchase material. Imagine things to learn, online classes  to take, projects to do during Mars '22.
 
 ## December 26 - Jan 2 | Move to Mars
 Ready or Not here we come!  
