--- a/_posts/2021-10-13-schedule.md
+++ b/_posts/2021-10-13-schedule.md
@@ -3,26 +3,30 @@ layout: post
 author: Chatsubo Z
 title: Mars 2022 Schedule
 description: A rough timeline of Mars College in 2022
-image: https://mars.college/images/gallery/thumb/VID_20210314_235300_163.mp4
+image: https://mars.college/images/gallery/Screen%20Shot%202020-04-08%20at%204.06.19%20PM.jpeg
 share_type: summary_large_image
 ---
+
 # Mars College 2022 schedule
+
 ## November 1 - December 25
-**Planning our Trip**
-Plan our build, organize and purchase material. Imagine things to learn, online classes  to take, projects to do during Mars '22.
+
+**Planning our Trip**: Plan our build, organize and purchase material. Imagine things to learn, online classes  to take, projects to do during Mars '22.
 
 ## December 26 - Jan 2
-**Move to Mars **
-Ready or Not here we come!  
+
+**Mission to Mars**: Ready or Not here we come!  
+
 * establish a base camp 
-* move our trailers & everything else
+* move our trailers, equipment, and tools
 * New Years Party on Mars !
 
 ## Jan 3 - 8 | Build Week 1
-**Pallet Racks !!!**
-One week to get our main building erected with floors and walls, stairs and guard rails. Everything screwed in, tied down and ready for the next phase.
+
+**Pallet Racks !!!**: One week to get our main building erected with floors and walls, stairs and guard rails. Everything screwed in, tied down and ready for the next phase. See [pallet racks](/gallery/pallet_racks)
 
 ## Jan 10 - 15
+
 **Infrastructure week**
 * Wifi Everywhere
 * Showers, kitchens, sinks, some sort of laundry
@@ -34,32 +38,29 @@ One week to get our main building erected with floors and walls, stairs and guar
 * hard work tables
 * solar panels, extension cords, power strips
 
+More about [work life](/work/).
+
 ## Jan 17 - 22
-**Welcome Week **
-With our physical layer taken care of this week we shift focus into the ethereal. We share meals, tell stories, imagine future's, plan projects, recruit collaborators, watch movies and generally put it all out there. Like an extended brainstorming session this is the time to throw it all out there and see what sticks. Most of the Mars College schedule is flexible, but this week is important for people to be present and engaged.
+**Welcome Week**: With our physical layer taken care of this week we shift focus into the ethereal. We share meals, tell stories, imagine future's, plan projects, recruit collaborators, watch movies and generally put it all out there. Like an extended brainstorming session this is the time to throw it all out there and see what sticks. Most of the Mars College schedule is flexible, but this week is important for people to be present and engaged.
 
 ## Jan 24 - Feb 18
-**First Semester **
+**First Semester**: start [learning and doing](/study)
 
 ## Feb 19 - 21
-**Mid Term Update & Spring Break **
+**Mid Term Update & Spring Break**: We'll plan a halfway exhibition for this weekend.
 
 ## Feb 22 - March 17
-**Second Semester **
+**Second Semester**: go all out on projects. This is home stretch.
 
 ## March 18 - 23 
-**Final Showcase **
+**Final Showcase**: an exhibition which will run into the weekend to show off our learnings and projects
 
 ## March 24 - 27
-**Electric Unicycle Rally**
+**Electric Unicycle Rally**: If you're interested in unicycling with us, [see here](/euc)
 
 ## March 28 - 31
-**End of Mars College
-Disengage, Break-down, organize and store
+**End of Mars College**: Disengage, Break-down, organize and store
   
-  
-# Events of Interest
-## April 21 - 24
-**[Neotropolis Cyber Punk Festival](https://www.neotropolis.com/about)
-  
-**[Burningman](https://burningman.org/)
+## April
+**Cool-down period**: Some possible events of interest for people who stick around the area
+ * [Neotropolis Cyber Punk Festival](https://www.neotropolis.com/about), April 21 - 24
