update atin's post

--- a/_posts/2022-03-24-solar.md
+++ b/_posts/2022-03-24-solar.md
@@ -7,6 +7,8 @@ image: https://mars.college/images/blog/warmup_birdseye.jpg
 share_type: summary_large_image
 ---
 
+This is a quick overview of what we learned and what I'd propose we consider on the next go for our (entirely off grid) solar power system on Mars. Many thanks to all who were involved with the power system this year! 
+
 # The 22 Approach
 
 Many systems, many arrays
@@ -18,11 +20,13 @@ Many systems, many arrays
 
 # The 22 Results
 
-Initially positive, but unbalancing sunk the ship
+![A semesters worth of fried electrical gear](/images/blog/solar_gear.jpg)
+
+Initially seemed to work OK, but unbalancing tanked our reliability
 
 * System initially handled okay, though was high in maintenance (many thanks to Flo for leading this!)
 * Feb 15: Disaster strikes when a solar charge controller fails, killing an inverter with it. The frankensteined remaining system overdraws every day for two weeks, unbalancing the batteries, before…
-* March 2nd: Replacement hardware arrives, but doesnt have enough extra amperage under load to really get the 48v battery array rebalanced
+* March 2nd: Replacement hardware arrives, but doesn’t have enough extra amperage to refill, let alone rebalance, its battery array
 * Trailer batteries struggle to refill themselves, BMS safety open circuits every night from here on out, load is unevenly distributed
 
 # Lessons Learned
@@ -36,22 +40,22 @@ Initially positive, but unbalancing sunk the ship
 
 # What about 2023?
 
-{% include figure.md path="/images/blog/solarsystem2023proposal.jpg" caption="Solar system 2023 proposal" %}
 
+{% include figure.md path="/images/blog/solarsystem2023proposal.jpg" caption="Solar system 2023 proposal - click for full size" %}
+ 
 Proposal: the **Power Room**
 
 3 systems based on criticality, colocated in partially dust protected space:
 * **Primary**: Largest system, handles main load, chargers, trailers
-* **Secondary**: frigerators, hydroponics, also able to step in for short stints in the event of primary failures 
+* **Secondary**: refrigerators, hydroponics, also able to step in for short stints in the event of primary failures 
 * **Critical**: Very small system for internet only 
 
-Solar panels remain on roofs for solarpunk #a e s t h e t i c but send power down to power room @ 120v so minimal voltage drop 
+This room could house the solar charge controllers as well - while maintaining our solarpunk #a e s t h e t i c of having our panels at the top of the various buildings, we can send the power down at 120v before transforming it to battery voltages. 
 
 Additional details / changes
 
-* Built in AC power selector for effortless changes between generator and inverter supply - $40 per, and allows non technical users to begin recovery 
+* Built in AC power selector for effortless changes between generator and inverter supply -  allows non technical users to begin recovery by simply turning on a generator, immediately the entire system has functioning AC power
 * 4x small (cheap) 12v chargers to rebalance the 48v battery banks
-* A large dedicated 48v battery charger to allow a generator to charge the 48v system (this is somewhat expensive and is medium priority, would be very nice and vastly improve recovery post full discharge)
+* A large dedicated 48v battery charger to allow a generator to charge the 48v system ( would be very nice and vastly improve recovery post full discharge)
 * Using 24v for the two smaller systems would reduce the amount of rebalancing, using 48v for the main system reduces voltage loss to wire inefficiency - there is a case to be made for for going all 24v or all 48v though
-* Allocating an extra 24v inverter + 2 batteries for a float would be optional, removes generator noise (major art car style points)
-
+* Allocating an extra 24v inverter + 2 100ah batteries for a art car would be optional, removes generator noise
