--- a/_posts/2022-06-09-build.md
+++ b/_posts/2022-06-09-build.md
@@ -3,20 +3,20 @@ layout: post
 author: chatsubo.z
 title: Build
 description: Fall is Build Season on Mars 
-image: https://mars.college/images/images/blog/image0-5A5C1.jpg
+image: https://mars.college/images/blog/campguild.jpg
 share_type: summary_large_image
 ---
 
 <style>
     img {
-        width: 60%;
+        width: 80%;
         display: block;
         margin-left: auto;
         margin-right: auto;
     }
 </style>
 
-![cosplay](/images/blog/image0-5A5C1.jpg)
+![cosplay](/images/blog/campguild.jpg)
 
 Fall is the build quarter at Mars College. We’ll be setting up the core infrastructure for all of the camps.
 This includes erecting pallet rack structures and enclosing the ground floor, installing solar, setting up the internet and media center, setting up the utility area with its water station, trash output area and storage.
