--- a/_posts/2022-7-17-yoga.md
+++ b/_posts/2022-7-17-yoga.md
@@ -8,11 +8,11 @@ share_type: summary_large_image
 ---
   
 The past few years I have been leading an asana and pranayama practice in the morning. I would love to expand that with meditation sessions, evening kirtan, satsang and shared healthy meals.
-<p/>
+
 As with the rest of Mars we don’t have paid faculty just enthusiastic practitioners eager to learn from the internet and each other.
-<p/>
+
 On mars we can build a little ashram for ourselves schedule our ideal routine, screen yoga teachers, kirtan performers, and enlightened teachers from around the world. 
-<p/>
+
 If you’d like to be part of the yoga camp at Mars College please indicate in the Application.
-<p/>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSdGwGCCvEFTOb4yauRoDrtShIVjVyNCZG7CtRjMzhqo8ghdRQ/viewform">Apply Now</a>
+
+[Apply Now](https://docs.google.com/forms/d/e/1FAIpQLSdGwGCCvEFTOb4yauRoDrtShIVjVyNCZG7CtRjMzhqo8ghdRQ/viewform)
