put clip on blog post automatically

--- a/_posts/2022-06-01-solar.md
+++ b/_posts/2022-06-01-solar.md
@@ -3,7 +3,7 @@ layout: post
 author: Atin Octavia
 title: The Sun on Mars
 description: 2022 Martian Solar Afteraction + suggestions for 2023
-image: https://mars.college/images/blog/warmup_birdseye.jpg
+image: https://mars.college/images/gallery/DJI_0196.JPG
 share_type: summary_large_image
 ---
 
