--- a/_posts/2022-06-09-build.md
+++ b/_posts/2022-06-09-build.md
@@ -7,22 +7,12 @@ image: https://mars.college/images/blog/campguild.jpg
 share_type: summary_large_image
 ---
 
-<style>
-    img {
-        width: 80%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-</style>
-
-![cosplay](/images/blog/campguild.jpg)
 
 Fall is the build quarter at Mars College. We’ll be setting up the core infrastructure for all of the camps.
 This includes erecting pallet rack structures and enclosing the ground floor, installing solar, setting up the internet and media center, setting up the utility area with its water station, trash output area and storage.
-<p/>
+
 The Urban Plan and placement will be done by Sept 21. We can begin the build after that. People who would like to join the build can come later than Sept 21 but once here it would be great if they could stay through to the end of build mid December.
-<p/>
+
 Let us know if you you are interested in joining us for the MC 23 build this coming fall.
-<p/>
-<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSdGwGCCvEFTOb4yauRoDrtShIVjVyNCZG7CtRjMzhqo8ghdRQ/viewform">Apply</a></b>
+
+[Apply](https://docs.google.com/forms/d/e/1FAIpQLSdGwGCCvEFTOb4yauRoDrtShIVjVyNCZG7CtRjMzhqo8ghdRQ/viewform)
