--- a/_posts/2022-07-12-Eden.md
+++ b/_posts/2022-07-12-Eden.md
@@ -7,20 +7,6 @@ image: https://mars.college/images/blog/eden.jpg
 share_type: summary_large_image
 ---
 
-
-
-<style>
-    
-    img {
-        width: 60%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-</style>
-
-![Eden](/images/blog/eden.jpg)
-
 Eden is the name of the software and infrastructure running in the cloud which powers [Abraham](https://abraham.ai/). 
 
 Through Eden we've managed to abstract the deployment and configuration of Abraham-like entities, semi-automated bots and web applications which are interacted with through text-to-image or text-to-text AI systems.
@@ -33,3 +19,5 @@ Some ideas for things we could try out:
  - making a discord channel which serves as a bot lounge, a single channel where the bots are set to converse with each other regularly throughout the day.
  - making individual artificial artists like Abraham
  - developing Eden, giving it new functionality
+
+[Applicants](/join) who are interested in helping make Eden will be able to get preferential housing in Bombay Beach for the duration of their stay. Please let us know in the [application](https://docs.google.com/forms/d/e/1FAIpQLSdGwGCCvEFTOb4yauRoDrtShIVjVyNCZG7CtRjMzhqo8ghdRQ/viewform).
